[tool.poetry]
name = "faradaygxacademy"
version = "0.1.0"
description = "Learning Management System"
authors = ["Oreofe Stephen <aosteph@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
